@@ -3,6 +3,8 @@
 This file documents user visible changes between versions of StumpWM
 
 * Changes since 0.9.5
+** AltGr works
+
 ** new top/root keymaps
 The *root-map* keymap and *top-map* have been split into several based
 on what group it applies to, tiling, floating, both.
